--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,13 +1,12 @@
 
 /* colors */
 
-$background: #F1BA7D;
-$borders: #583C1C;
-$selected: #A57745;
-$action: #8EE59C;
-$actionContrast: #C3FFCD;
+$background: #222;
+$selected: #666;
+$action: #86E57B;
+$actionContrast: #1FA513;
 $contrast: #8C59F1;
-$textcolor: #222;
+$textcolor: #fff;
 	
 
 /*********** Remove default styling ***********/
@@ -40,7 +39,6 @@ nav {
 	width: 100%;
 	height: 50px;
 	background-color: $background;
-	border-bottom: 2px solid $borders;
 	ul {
 		display: none;
 		height: auto;
@@ -106,19 +104,18 @@ nav {
 .banner {
 	height: 190px;
 	width: 100%;
-	border-bottom: 2px solid $borders;
-	background: url('../img/Cathedral1.jpg') no-repeat;
+	background: url('../img/GothCathedralSmall.jpg') no-repeat;
 	background-size: cover;
 	background-color: $background;
 	p {
 		color: $background;
 		position: absolute;
-		top: 40px;
-		right: 50px;
+		top: 170px;
+		left: 50px;
 		font-size: 1.5em;
 		z-index: 10;
-		-webkit-animation: groupname 6s 0.5s forwards;
-		animation: groupname 6s 0.5s forwards;
+		-webkit-animation: groupname 3s 0.5s forwards;
+		animation: groupname 3s 0.5s forwards;
 	}
 }
 
@@ -127,31 +124,30 @@ nav {
 @-webkit-keyframes groupname {
 	from {
 		color: $background;
-		right: 50;
+		left: 50;
 	}
 	to {
 		color: $textcolor;
-		right: 30;
+		left: 30;
 	}
 }
 
 @keyframes groupname {
 	from {
 		color: $background;
-		right: 50;
+		left: 50;
 	}
 	to {
 		color: $textcolor;
-		right: 30;
+		left: 30;
 	}
 }
 
-	/*	semi-opaque color layer over banner image */
+	/*	gradient color layer over banner image */
 
 .banner::after {
 	content: "";
-	background-color: $background;
-	opacity: 0.4;
+	background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1));
 	margin-top: 50px;
 	height: 190px;
 	top: 0;
@@ -168,33 +164,32 @@ nav {
 }
 /*main content area styling*/
 
-.event, .listen, .splash-about, .watch, .about{
+.event, .listen, .splash-about, .watch, .about {
 	height: auto;
 	padding-bottom: 20px;
 	display: inline-block;
 	width: 100%;
 	p {
-		margin-left: 20%;
-		padding-right: 15px;
+		margin-right: 15px;
+		margin-left: 25px;
 		font-size: .8em;
 		a {
 			text-decoration: underline;
 		}
 	}
-	h1, h2 {
+	h1, h2, h4 {
+		margin-top: 15px;
+		text-align: center;
+		margin-bottom: 0px;
 		font-size: 1.2em;
-		margin-left: 20px;
 	}
 }
 
 	/* events area styling */
 
 .event {
-	border-bottom: 1px solid $borders;
-	p {
-		display: inline-block;
-		width: 60%;
-		margin-top: 0;
+	ul {
+		font-size: .9em;
 	}
 	button {
 		display: block;
@@ -205,7 +200,7 @@ nav {
 		border-radius: 5px;
 		height: 40px;
 		width: 140px;
-		letter-spacing: 1.2;
+		font-weight: bold;
 		-webkit-transition: background-color .5s;
 		transition: background-color .5s;
 	}
@@ -219,18 +214,23 @@ nav {
 	display: none;
 }
 
-	/* about area styling */
+	/*listen area styling */
 
+.listen iframe {
+	margin-top: 15px;
+}
+	/* about page mobile styling */
 
-	.headshot {
-		background: url('../img/headshot.jpg') no-repeat;
-		background-size: cover;
-		height: 200px;
-		width: 140px;
-		margin-left: 20%;
-	}
-
-
+.headshot {
+	float: left;
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-bottom: 20px;
+	height: 200px;
+	width: 140px;
+	background: url('../img/headshot.jpg') no-repeat;
+	background-size: cover;
+}
 
 	/** Footer Styling **/
 
@@ -268,7 +268,6 @@ nav {
 	}
 }
 
-
 /******************DESKTOP   STYLING  ********************/
 
 @media only screen and (min-width : 768px) {
@@ -277,68 +276,6 @@ nav {
 
 	.splash-about, .watch {
 		display: inline-block;
-	}
-
-/*****************GRID***********************/
-	.grid-container {
-		float: left;
-		min-height: 1px;
-	}
-
-	.grid-container:first-child {
-		left-margin: 0;
-	}
-
-	/* Columns are 65px wide, with 20px gutters
-	=========================================== */
-
-	.grid-1 {
-		width: 6.5%;
-	}
-
-	.grid-2 {
-		width: 15%;
-	}
-
-	.grid-3 {
-		width: 23.5%;
-	}
-	.grid-4 {
-		width: 33%;
-	}
-	.grid-5 {
-		width: 41.5%;
-	}
-	.grid-6 {
-		width: 49%;
-	}
-	.grid-7 {
-		width: 58%;
-	}
-	.grid-8 {
-		width: 67%;
-	}
-	.grid-9 {
-		width: 74.5%;
-	}
-	.grid-10 {
-		width: 83%;
-	}
-	.grid-11 {
-		width: 91.5%;
-	}
-	.grid-12 {
-		width: 100%;
-	}
-
-	/* Clearfix
-	================================ */
-
-	.group:after,
-	.grid-container:after {
-	  content: " ";
-	  display: table;
-	  clear: both;
 	}
 
 /** desktop nav **/
@@ -380,7 +317,7 @@ nav {
 		}
 	}
 
-	/*desktop resizes color overlay of banner image*/
+	/*desktop resizes gradient overlay of banner image*/
 
 	.banner::after {
 		height: 300px;
@@ -391,19 +328,36 @@ nav {
 		margin: auto;
 	}
 
-	/*  main content area styling  */
+	/*********  main content area styling  ***********/
+
+	/* height for top row */
 
 	.event, .splash-about{
-		height: 150px;
-		border-bottom: 1px solid $borders;
+		height: 220px;
 	}
 
-	.event, .listen {
-		border-right: 1px solid $borders;
+	/* width for left column */
+
+	.event, .listen, .splash-about, .watch{
+		display: inline-block;
+		width: 50%;
+		-webkit-box-sizing: border-box;
+     	-moz-box-sizing: border-box;
+        box-sizing: border-box;
 	}
-		.splash-about {
+
+	/* width for right column */
+
+	.splash-about, .watch {
+		float: right;
+	}
+	
+	/* set text overflow for splash page about section **/
+
+	.splash-about {
 		overflow: scroll;
 	}
+
 }
 
 
