--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ nav {
     margin-top: 15px;
     text-align: center;
     margin-bottom: 0px;
-    font-size: 1.2em; }
+    font-size: 1.4em; }
 
 /* events area styling */
 .event ul {
@@ -180,7 +180,8 @@ nav {
   display: inline-block;
   width: 100%;
   height: 80px;
-  background-color: #222; }
+  background-color: #222;
+  color: #fff; }
   .footer p {
     display: inline;
     float: left;
@@ -190,6 +191,7 @@ nav {
     margin-left: 15px;
     font-size: .7em; }
     .footer p a {
+      color: #fff;
       text-decoration: underline; }
   .footer .social-links {
     display: inline-block;
