--- a/css/styles.scss
+++ b/css/styles.scss
@@ -184,7 +184,7 @@ nav {
 		margin-top: 15px;
 		text-align: center;
 		margin-bottom: 0px;
-		font-size: 1.2em;
+		font-size: 1.4em;
 	}
 }
 
@@ -242,6 +242,7 @@ nav {
 	width: 100%;
 	height: 80px;
 	background-color: $background;
+	color: $textcolor;
 	p {
 		display: inline;
 		float: left;
@@ -251,6 +252,7 @@ nav {
 		margin-left: 15px;
 		font-size: .7em;
 		a {
+			color: $textcolor;
 			text-decoration: underline;
 		}
 	}
